# Gestao-de-Projetos-PM-IA-BSC-DashBoard

./: .gitignore  README.de.md  README.en.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.ko.md  README.md  README.ru.md  README.sv.md  README.zh.md
.github/workflows/: deploy-pages.yml
foundations/: Assinatura_IA.md  BSC_Dashboard.md  CHECKPOINT.md  Interrupcoes.md  KPIs.md  KPIs_Lean6s_BSC.md  KPIs_README.md  README.md  Tokens.md  _TEMPLATE_projeto.md  bscdashboardgerencial.md  github_load.md  planos_assinatura_IA.md  projeto_main.md  solucoes_relatorios.md  translation.md
foundations/admtools/: ferramentas_administrativas.md
foundations/evidence/pages/: index.md
foundations/pipeline/: .env.example  .gitignore  PERFORMANCE.md  README.md  SETUP.md  ahp_topsis.py  ajuste_distribuicoes.py  analise.py  buffer_ccpm.py  cadeia_causal.py  carregar_fluxo.py  compute_kpis.py  config.py  contencao.py  cronograma_mc.py  db.py  evm.py  exec_metricas.py  fivedchart_lib.py  fluxo.py  fluxo_caixa_template.csv  gerar_5d_projetos.py  gerar_admtools.py  gerar_dashboard_i18n.py  gerar_evm.py  gerar_gantt.py  gerar_loop_tela.py  gerar_mc_graficos.py  gerar_mcdm_graficos.py  gerar_orcamento_telas.py  gerar_pitchdeck.py  gerar_pitchdeck_template2.py  gerar_pm_agent_telas.py  gerar_robustez_graficos.py  gerar_telas_execucao.py  inserir_weekly.py  mcdm.py  monte_carlo.py  orcamento.py  pm_agent.py  (+15 more)
foundations/pipeline/analise_rs/: Cargo.toml  pyproject.toml
foundations/pipeline/analise_rs/src/: lib.rs
foundations/pitchdeck/: pitchdeck.md
(+85 files in other folders)
